# alfabank-sbp

./: .gitignore  LICENSE  README.md  pyproject.toml
alfabank/: sbp.py
alfabank_sbp/: client.py  exceptions.py
