[project]
name = "alfabank"
version = "0.1.0"
description = ""
authors = [
    {name = "white",email = "sasha.2000ubr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "cryptography (>=45.0.5,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
